# svg.transform

./: CHANGES.txt  CONTRIBUTORS.txt  README.rst  setup.cfg
.github/workflows/: integration.yml
src/svg.transform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/svg/transform/: __init__.py
tests/: test_transforms.py
