[metadata]
name = svg.transform
version = 0.1b2.dev0
description = SVG path objects and parser
long_description = file: README.rst, CONTRIBUTORS.txt, CHANGES.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics
keywords = svg, path, maths, transforms
author = Lennart Regebro
author_email = regebro@gmail.com
url = https://github.com/regebro/svg.transform
license = MIT

[options]
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = src
install_requires =
    numpy

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    Pillow
    black
    flake8
    pyroma
    check-manifest
    zest.releaser[recommended]

[flake8]
max-line-length=120

[bdist_wheel]
universal=1

[tool:pytest]
testpaths =
    tests
